biography part done

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Website</title>
+    <title>Portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -12,11 +12,21 @@
         <div class="half-width text-center">
             <h1>Hello I'm</h1>
     <h1 id="name-highlight">Daniel Craig</h1>
-    <p class="space">You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work.</p>
+    <p class="button-space">You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work.</p>
     <a class="link-button" target="_blank" href="https://www.linkedin.com/in/hasan-mahmud-zeeshan-6b6b72125/">HIRE ME</a>
         </div>
         <div class="half-width pic-center">
-            <img src="images/peter.png" alt="1st pic of me">
+            <img src="images/peter.png" alt="first pic of daniel">
+        </div>
+    </section>
+    <section class="biography-area">
+        <div class="half-width bio-pic-center">
+            <img src="images/peter_dream.png" alt="second pic of daniel">
+        </div>
+        <div class="half-width bio-text-center">
+        <h1>Biography</h1>
+        <p class="button-space">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+        <a class="link-button" target="_blank" href="https://www.linkedin.com/in/hasan-mahmud-zeeshan-6b6b72125/">Download CV</a>
         </div>
     </section>
 </body>
