--- a/index.html
+++ b/index.html
@@ -29,5 +29,23 @@
         <a class="link-button" target="_blank" href="https://www.linkedin.com/in/hasan-mahmud-zeeshan-6b6b72125/">Download CV</a>
         </div>
     </section>
+    <section class="latest-work">
+        <div class="work-text">
+            <h2>My Latest Work</h2>
+        </div>
+        <div class="main-gallary">
+        <div class="gallary">
+            <img src="images/latest-work/work-1.png" alt="">
+        </div>
+        <div class="gallary">
+            <img src="images/latest-work/work-2.jpg" alt="">
+        </div>
+        <div class="gallary">
+            <img src="images/latest-work/work-3.jpg" alt="">
+        </div>
+        </div>
+
+
+    </section>
 </body>
 </html>
