--- a/index.html
+++ b/index.html
@@ -50,5 +50,17 @@
 
 
     </section>
+    <section class="center-align">
+        <div>
+            <h1 >What Client are say</h1>
+            <h3>Bruce Moccy</h3>
+            <p>Founder & CEO Alies</p>
+            <p class="button-space">"Loren Ipsum is simply dummy text of the printing and typesetting industry. Loren Ipsum"</p>
+            <div id="web" class="xp">
+            <p>Leave me a message in the<br> <span id="bold">xeeshan246@gmail.com</span></p>
+        </div>
+        </div>
+    </section>
+    <footer class="center-footer">Programming Hero Initiative. (C) 2020 All Rights Reserved.</footer>
 </body>
 </html>
