--- a/index.html
+++ b/index.html
@@ -50,15 +50,18 @@
 
 
     </section>
-    <section class="center-align">
-        <div>
-            <h1 >What Client are say</h1>
-            <h3>Bruce Moccy</h3>
-            <p>Founder & CEO Alies</p>
-            <p class="button-space">"Loren Ipsum is simply dummy text of the printing and typesetting industry. Loren Ipsum"</p>
-            <div id="web" class="xp">
-            <p>Leave me a message in the<br> <span id="bold">xeeshan246@gmail.com</span></p>
+    <section class="footer-bg">
+        <div class="work-text">
+            <h1 >What clients are saying</h1>
         </div>
+        <div>
+            <h2>Bruce Moccy</h2>
+            <h5>Founder & CEO Alies</h5>
+            <p class="button-space">"Loren Ipsum is simply dummy text of the printing and typesetting industry. Loren Ipsum"</p>
+            <div>
+            <div id="connect" class="my-mail">
+            <p>If needed leave me a message in</p>
+            <h3>xeeshan246@gmail.com</h3>
         </div>
     </section>
     <footer class="center-footer">Programming Hero Initiative. (C) 2020 All Rights Reserved.</footer>
